StereoKitC/stereokit.h


typedef int32_t bool32_t;


/*Severity of a log item.*/
typedef enum log_ {
	log_none                      = 0,
	/*This is for diagnostic information, where you need to know
	  details about what -exactly- is going on in the system. This
	  info doesn't surface by default.*/
	log_diagnostic,
	/*This is non-critical information, just to let you know what's
	  going on.*/
	log_inform,
	/*Something bad has happened, but it's still within the realm of
	  what's expected.*/
	log_warning,
	/*Danger Will Robinson! Something really bad just happened and
	  needs fixing!*/
	log_error
} log_;


///////////////////////////////////////////

typedef struct vec2 {
	float x;
	float y;
} vec2;

typedef struct vec3 {
	float x;
	float y;
	float z;
} vec3;

typedef struct quat {
	float x;
	float y;
	float z; 
	float w;
} quat;

typedef struct bounds_t {
	vec3 center;
	vec3 dimensions;
} bounds_t;

typedef struct pose_t {
	vec3 position;
	quat orientation;
} pose_t;


///////////////////////////////////////////

typedef struct color32 {
	uint8_t r;
	uint8_t g;
	uint8_t b;
	uint8_t a;
} color32;

typedef struct color128 {
	float r;
	float g;
	float b;
	float a;
} color128;


///////////////////////////////////////////

typedef struct vert_t {
	vec3    pos;
	vec3    norm;
	vec2    uv;
	color32 col;
} vert_t;


typedef uint32_t text_style_t;

SK_API sound_t      sound_generate       (float (*function)(float sample_time), float duration);


/*An enum for indicating which hand to use!*/
typedef enum handed_ {
	/*Left hand.*/
	handed_left                = 0,
	/*Right hand.*/
	handed_right               = 1,
	/*The number of hands one generally has, this is much nicer
	  than doing a for loop with '2' as the condition! It's much clearer
	  when you can loop Hand.Max times instead.*/
	handed_max                 = 2,
} handed_;


/*A bit-flag for the current state of a button input.*/
typedef enum button_state_ {
	/*Is the button currently up, unpressed?*/
	button_state_inactive      = 0,
	/*Is the button currently down, pressed?*/
	button_state_active        = 1 << 0,
	/*Has the button just been released? Only true for a single frame.*/
	button_state_just_inactive = 1 << 1,
	/*Has the button just been pressed? Only true for a single frame.*/
	button_state_just_active   = 1 << 2,
	/*Has the button just changed state this frame?*/
	button_state_changed       = button_state_just_inactive | button_state_just_active,
	/*Matches with all states!*/
	button_state_any           = 0x7FFFFFFF,
} button_state_;


/*This describes the platform that StereoKit is running on.*/
typedef enum backend_platform_ {
	/*This is running as a Windows app using the Win32 APIs.*/
	backend_platform_win32,
	/*This is running as a Windows app using the UWP APIs.*/
	backend_platform_uwp,
	/*This is running as a Linux app.*/
	backend_platform_linux,
	/*This is running as an Android app.*/
	backend_platform_android,
	/*This is running in a browser.*/
	backend_platform_web,
} backend_platform_;


/*This describes the graphics API thatStereoKit is using for rendering.*/
typedef enum backend_graphics_ {
	/*An invalid default value. Right now, this may likely indicate a variety
	  of OpenGL.*/
	backend_graphics_none,
	/*DirectX's Direct3D11 is used for rendering!*/
	backend_graphics_d3d11,
} backend_graphics_;


typedef uint64_t openxr_handle_t;

SK_API openxr_handle_t   backend_openxr_get_instance();

SK_API openxr_handle_t   backend_openxr_get_session ();

SK_API openxr_handle_t   backend_openxr_get_space   ();

SK_API int64_t           backend_openxr_get_time    ();

SK_API int64_t           backend_openxr_get_eyes_sample_time();

SK_API void             *backend_openxr_get_function(const char *function_name);

SK_API bool32_t          backend_openxr_ext_enabled (const char *extension_name);

SK_API void              backend_openxr_ext_request (const char *extension_name);

SK_API void              backend_openxr_composition_layer(void *XrCompositionLayerBaseHeader, int32_t layer_size, int32_t sort_order);


SK_API backend_platform_ backend_platform_get         ();

SK_API void             *backend_android_get_java_vm  ();

SK_API void             *backend_android_get_activity ();

SK_API void             *backend_android_get_jni_env  ();


SK_API backend_graphics_ backend_graphics_get         ();

SK_API void             *backend_d3d11_get_d3d_device ();

SK_API void             *backend_d3d11_get_d3d_context();


///////////////////////////////////////////

/*The log tool will write to the console with annotations for console
  colors, which helps with readability, but isn't always supported.
  These are the options available for configuring those colors.*/
typedef enum log_colors_ {
	/*Use console coloring annotations.*/
	log_colors_ansi = 0,
	/*Scrape out any color annotations, so logs are all completely
	  plain text.*/
	log_colors_none
} log_colors_;


SK_API void log_diag       (const char* text);

SK_API void log_info       (const char* text);

SK_API void log_warn       (const char* text);

SK_API void log_err        (const char* text);

SK_API void log_write      (log_ level, const char* text);

SK_API void log_set_filter (log_ level);

SK_API void log_set_colors (log_colors_ colors);

SK_API void log_subscribe  (void (*on_log)(log_ level, const char *text));

SK_API void log_unsubscribe(void (*on_log)(log_ level, const char *text));


///////////////////////////////////////////

SK_API void    assets_releaseref_threadsafe(void *asset);

SK_API int32_t assets_current_task         ();

SK_API int32_t assets_total_tasks          ();

SK_API int32_t assets_current_task_priority();

SK_API void    assets_block_for_priority   (int32_t priority);