LibStereoKit.jl


# no prototype is found for this function at stereokit.h:1927:26, please use with caution
function backend_openxr_get_instance()
    @ccall StereoKitC.backend_openxr_get_instance()::openxr_handle_t
end

# no prototype is found for this function at stereokit.h:1928:26, please use with caution
function backend_openxr_get_session()
    @ccall StereoKitC.backend_openxr_get_session()::openxr_handle_t
end

# no prototype is found for this function at stereokit.h:1929:26, please use with caution
function backend_openxr_get_space()
    @ccall StereoKitC.backend_openxr_get_space()::openxr_handle_t
end

# no prototype is found for this function at stereokit.h:1930:26, please use with caution
function backend_openxr_get_time()
    @ccall StereoKitC.backend_openxr_get_time()::Int64
end

# no prototype is found for this function at stereokit.h:1931:26, please use with caution
function backend_openxr_get_eyes_sample_time()
    @ccall StereoKitC.backend_openxr_get_eyes_sample_time()::Int64
end

function backend_openxr_get_function(function_name)
    @ccall StereoKitC.backend_openxr_get_function(function_name::Ptr{Cchar})::Ptr{Cvoid}
end

function backend_openxr_ext_enabled(extension_name)
    @ccall StereoKitC.backend_openxr_ext_enabled(extension_name::Ptr{Cchar})::bool32_t
end

function backend_openxr_ext_request(extension_name)
    @ccall StereoKitC.backend_openxr_ext_request(extension_name::Ptr{Cchar})::Cvoid
end

function backend_openxr_composition_layer(XrCompositionLayerBaseHeader, layer_size, sort_order)
    @ccall StereoKitC.backend_openxr_composition_layer(XrCompositionLayerBaseHeader::Ptr{Cvoid}, layer_size::Int32, sort_order::Int32)::Cvoid
end

# no prototype is found for this function at stereokit.h:1937:26, please use with caution
function backend_platform_get()
    @ccall StereoKitC.backend_platform_get()::backend_platform_
end

# no prototype is found for this function at stereokit.h:1938:26, please use with caution
function backend_android_get_java_vm()
    @ccall StereoKitC.backend_android_get_java_vm()::Ptr{Cvoid}
end

# no prototype is found for this function at stereokit.h:1939:26, please use with caution
function backend_android_get_activity()
    @ccall StereoKitC.backend_android_get_activity()::Ptr{Cvoid}
end

# no prototype is found for this function at stereokit.h:1940:26, please use with caution
function backend_android_get_jni_env()
    @ccall StereoKitC.backend_android_get_jni_env()::Ptr{Cvoid}
end

# no prototype is found for this function at stereokit.h:1942:26, please use with caution
function backend_graphics_get()
    @ccall StereoKitC.backend_graphics_get()::backend_graphics_
end

# no prototype is found for this function at stereokit.h:1943:26, please use with caution
function backend_d3d11_get_d3d_device()
    @ccall StereoKitC.backend_d3d11_get_d3d_device()::Ptr{Cvoid}
end

# no prototype is found for this function at stereokit.h:1944:26, please use with caution
function backend_d3d11_get_d3d_context()
    @ccall StereoKitC.backend_d3d11_get_d3d_context()::Ptr{Cvoid}
end

@cenum log_colors_::UInt32 begin
    log_colors_ansi = 0
    log_colors_none = 1
end

function log_diag(text)
    @ccall StereoKitC.log_diag(text::Ptr{Cchar})::Cvoid
end

function log_info(text)
    @ccall StereoKitC.log_info(text::Ptr{Cchar})::Cvoid
end

function log_warn(text)
    @ccall StereoKitC.log_warn(text::Ptr{Cchar})::Cvoid
end

function log_err(text)
    @ccall StereoKitC.log_err(text::Ptr{Cchar})::Cvoid
end

function log_write(level, text)
    @ccall StereoKitC.log_write(level::log_, text::Ptr{Cchar})::Cvoid
end

function log_set_filter(level)
    @ccall StereoKitC.log_set_filter(level::log_)::Cvoid
end

function log_set_colors(colors)
    @ccall StereoKitC.log_set_colors(colors::log_colors_)::Cvoid
end

function log_subscribe(on_log)
    @ccall StereoKitC.log_subscribe(on_log::Ptr{Cvoid})::Cvoid
end

function log_unsubscribe(on_log)
    @ccall StereoKitC.log_unsubscribe(on_log::Ptr{Cvoid})::Cvoid
end

function assets_releaseref_threadsafe(asset)
    @ccall StereoKitC.assets_releaseref_threadsafe(asset::Ptr{Cvoid})::Cvoid
end

# no prototype is found for this function at stereokit.h:1977:16, please use with caution
function assets_current_task()
    @ccall StereoKitC.assets_current_task()::Int32
end

# no prototype is found for this function at stereokit.h:1978:16, please use with caution
function assets_total_tasks()
    @ccall StereoKitC.assets_total_tasks()::Int32
end

# no prototype is found for this function at stereokit.h:1979:16, please use with caution
function assets_current_task_priority()
    @ccall StereoKitC.assets_current_task_priority()::Int32
end

function assets_block_for_priority(priority)
    @ccall StereoKitC.assets_block_for_priority(priority::Int32)::Cvoid
end

@cenum ui_move_::UInt32 begin
    ui_move_exact = 0
    ui_move_face_user = 1
    ui_move_pos_only = 2
    ui_move_none = 3
end

@cenum ui_win_::UInt32 begin
    ui_win_empty = 0
    ui_win_head = 1
    ui_win_body = 2
    ui_win_normal = 3
end

@cenum ui_confirm_::UInt32 begin
    ui_confirm_push = 0
    ui_confirm_pinch = 1
    ui_confirm_variable_pinch = 2
end

@cenum ui_vis_::UInt32 begin
    ui_vis_none = 0
    ui_vis_default = 1
    ui_vis_button = 2
    ui_vis_toggle = 3
    ui_vis_input = 4
    ui_vis_handle = 5
    ui_vis_window_body = 6
    ui_vis_window_body_only = 7
    ui_vis_window_head = 8
    ui_vis_window_head_only = 9
    ui_vis_separator = 10
    ui_vis_slider_line = 11
    ui_vis_slider_push = 12
    ui_vis_slider_pinch = 13
    ui_vis_max = 14
end

@cenum ui_color_::UInt32 begin
    ui_color_primary = 0
    ui_color_background = 1
    ui_color_common = 2
    ui_color_complement = 3
    ui_color_text = 4
    ui_color_max = 5
end

@cenum ui_pad_::UInt32 begin
    ui_pad_none = 0
    ui_pad_inside = 1
    ui_pad_outside = 2
end

@cenum ui_btn_layout_::UInt32 begin
    ui_btn_layout_left = 0
    ui_btn_layout_right = 1
    ui_btn_layout_center = 2
    ui_btn_layout_center_no_text = 3
end

struct ui_settings_t
    padding::Cfloat
    gutter::Cfloat
    depth::Cfloat
    backplate_depth::Cfloat
    backplate_border::Cfloat
end

function ui_quadrant_size_verts(ref_vertices, vertex_count, overflow_percent)
    @ccall StereoKitC.ui_quadrant_size_verts(ref_vertices::Ptr{vert_t}, vertex_count::Int32, overflow_percent::Cfloat)::Cvoid
end

function ui_quadrant_size_mesh(ref_mesh, overflow_percent)
    @ccall StereoKitC.ui_quadrant_size_mesh(ref_mesh::mesh_t, overflow_percent::Cfloat)::Cvoid
end

function ui_show_volumes(show)
    @ccall StereoKitC.ui_show_volumes(show::bool32_t)::Cvoid
end

function ui_enable_far_interact(enable)
    @ccall StereoKitC.ui_enable_far_interact(enable::bool32_t)::Cvoid
end

# no prototype is found for this function at stereokit_ui.h:81:17, please use with caution
function ui_far_interact_enabled()
    @ccall StereoKitC.ui_far_interact_enabled()::bool32_t
end

function ui_settings(settings)
    @ccall StereoKitC.ui_settings(settings::ui_settings_t)::Cvoid
end

# no prototype is found for this function at stereokit_ui.h:83:17, please use with caution
function ui_get_padding()
    @ccall StereoKitC.ui_get_padding()::Cfloat
end

# no prototype is found for this function at stereokit_ui.h:84:17, please use with caution
function ui_get_gutter()
    @ccall StereoKitC.ui_get_gutter()::Cfloat
end

function ui_set_color(color)
    @ccall StereoKitC.ui_set_color(color::color128)::Cvoid
end

function ui_set_theme_color(color_type, color_gamma)
    @ccall StereoKitC.ui_set_theme_color(color_type::ui_color_, color_gamma::color128)::Cvoid
end

function ui_get_theme_color(color_type)
    @ccall StereoKitC.ui_get_theme_color(color_type::ui_color_)::color128
end

function ui_set_element_visual(element_visual, mesh, material, min_size)
    @ccall StereoKitC.ui_set_element_visual(element_visual::ui_vis_, mesh::mesh_t, material::material_t, min_size::vec2)::Cvoid
end

function ui_push_text_style(style)
    @ccall StereoKitC.ui_push_text_style(style::text_style_t)::Cvoid
end

# no prototype is found for this function at stereokit_ui.h:91:17, please use with caution
function ui_pop_text_style()
    @ccall StereoKitC.ui_pop_text_style()::Cvoid
end

function ui_push_tint(tint_gamma)
    @ccall StereoKitC.ui_push_tint(tint_gamma::color128)::Cvoid
end

# no prototype is found for this function at stereokit_ui.h:93:17, please use with caution
function ui_pop_tint()
    @ccall StereoKitC.ui_pop_tint()::Cvoid
end

function ui_push_enabled(enabled)
    @ccall StereoKitC.ui_push_enabled(enabled::bool32_t)::Cvoid
end

# no prototype is found for this function at stereokit_ui.h:95:17, please use with caution
function ui_pop_enabled()
    @ccall StereoKitC.ui_pop_enabled()::Cvoid
end

function ui_push_preserve_keyboard(preserve_keyboard)
    @ccall StereoKitC.ui_push_preserve_keyboard(preserve_keyboard::bool32_t)::Cvoid
end

# no prototype is found for this function at stereokit_ui.h:97:17, please use with caution
function ui_pop_preserve_keyboard()
    @ccall StereoKitC.ui_pop_preserve_keyboard()::Cvoid
end

function ui_push_surface(surface_pose, layout_start, layout_dimensions)
    @ccall StereoKitC.ui_push_surface(surface_pose::pose_t, layout_start::vec3, layout_dimensions::vec2)::Cvoid
end

# no prototype is found for this function at stereokit_ui.h:99:17, please use with caution
function ui_pop_surface()
    @ccall StereoKitC.ui_pop_surface()::Cvoid
end

function ui_push_id(id)
    @ccall StereoKitC.ui_push_id(id::Ptr{Cchar})::uint64_t
end

function ui_push_id_16(id)
    @ccall StereoKitC.ui_push_id_16(id::Ptr{char16_t})::uint64_t
end

function ui_push_idi(id)
    @ccall StereoKitC.ui_push_idi(id::Int32)::uint64_t
end

# no prototype is found for this function at stereokit_ui.h:103:17, please use with caution
function ui_pop_id()
    @ccall StereoKitC.ui_pop_id()::Cvoid
end

function ui_stack_hash(string)
    @ccall StereoKitC.ui_stack_hash(string::Ptr{Cchar})::uint64_t
end

function ui_stack_hash_16(string)
    @ccall StereoKitC.ui_stack_hash_16(string::Ptr{char16_t})::uint64_t
end

function ui_layout_area(start, dimensions)
    @ccall StereoKitC.ui_layout_area(start::vec3, dimensions::vec2)::Cvoid
end

# no prototype is found for this function at stereokit_ui.h:108:17, please use with caution
function ui_layout_remaining()
    @ccall StereoKitC.ui_layout_remaining()::vec2
end

# no prototype is found for this function at stereokit_ui.h:109:17, please use with caution
function ui_layout_at()
    @ccall StereoKitC.ui_layout_at()::vec3
end

# no prototype is found for this function at stereokit_ui.h:110:17, please use with caution
function ui_layout_last()
    @ccall StereoKitC.ui_layout_last()::bounds_t
end

function ui_layout_reserve(size, add_padding, depth)
    @ccall StereoKitC.ui_layout_reserve(size::vec2, add_padding::bool32_t, depth::Cfloat)::bounds_t
end

function ui_last_element_hand_used(hand)
    @ccall StereoKitC.ui_last_element_hand_used(hand::handed_)::button_state_
end

# no prototype is found for this function at stereokit_ui.h:114:22, please use with caution
function ui_last_element_active()
    @ccall StereoKitC.ui_last_element_active()::button_state_
end

# no prototype is found for this function at stereokit_ui.h:115:22, please use with caution
function ui_last_element_focused()
    @ccall StereoKitC.ui_last_element_focused()::button_state_
end

# no prototype is found for this function at stereokit_ui.h:117:17, please use with caution
function ui_area_remaining()
    @ccall StereoKitC.ui_area_remaining()::vec2
end

# no prototype is found for this function at stereokit_ui.h:118:17, please use with caution
function ui_nextline()
    @ccall StereoKitC.ui_nextline()::Cvoid
end

# no prototype is found for this function at stereokit_ui.h:119:17, please use with caution
function ui_sameline()
    @ccall StereoKitC.ui_sameline()::Cvoid
end
